force-app/main/default/objects/S3User__c/S3User__c.object-meta.xml
<CustomObject>
    <label>Replay User</label>
    <nameField>
        <label>Replay User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Replay Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>