force-app/main/default/objects/S3User__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>CASESAFEID(Contact__r.Account.Id)</formula>
    <label>accountId</label>
    <type>Text</type>
</CustomField>