force-app/main/default/objects/S3User__c/fields/Auth0_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Auth0_User_Id__c</fullName>
    <label>Auth0 User Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>