force-app/main/default/objects/S3User__c/fields/PasswordChangeTicket__c.field-meta.xml
<CustomField>
    <fullName>PasswordChangeTicket__c</fullName>
    <description>Password Change Ticket request result from Auth0</description>
    <label>PasswordChangeTicket</label>
    <type>TextArea</type>
</CustomField>