force-app/main/default/objects/S3User__c/fields/ProvisioningEmailSent__c.field-meta.xml
<CustomField>
    <fullName>ProvisioningEmailSent__c</fullName>
    <label>Provisioning Email Sent</label>
    <type>DateTime</type>
</CustomField>