force-app/main/default/objects/S3User__c/fields/RT_Replay_User_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_Replay_User_Id__c</fullName>
    <description>Migration</description>
    <externalId>true</externalId>
    <label>RT Replay User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>